--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,116 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{ 
+  padding: 60px;    
+  background-color: #E0FFFF;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.start{
+  height: 100vh;
+  margin: auto; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;  
+  font-family: 'Montserrat', sans-serif;
+}
+.heading{
+  font-weight: bolder;
+}
+.desc{
+margin-top: 0px;
+}
+.start-btn{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  background: #4D5B9E;
+  cursor: pointer;
+  border: 1px solid #ccc;
+}
+.Ans-btn{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 0px;
+  margin-right: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  color: #4D5B9E;
+  font-weight: bold;
+  background: white;
+  cursor: pointer;
+  border: 1px solid #4D5B9E;
+}
+.start-btn:active {
+background: #e5e5e5;
+-webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+   -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+        box-shadow: inset 0px 0px 5px #c1c1c1;
+ outline: none;
+}
+.Ans-btnSelect{
+  background: #4D5B9E;
+  color: white;
+  outline: none;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 0px;
+  margin-right: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  border: 1px solid #4D5B9E;
+}
+.chk-ans{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  background: #4D5B9E;
+  cursor: pointer;
+  border: 1px solid #ccc;
+}
+.footer{
+  display: flex;
+  justify-content: center;    
+  margin-top: 0px;
+}
+.hrtag{
+  margin-top: 30px;
+  margin-bottom: 0px;
+}
+.right-ans{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 0px;
+  margin-right: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  background: green;
+  cursor: pointer;
+  border: 1px solid #4D5B9E;
+}
+.wrong-ans{
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  margin-top: 0px;
+  margin-right: 30px;
+  width: 150px;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  background: red;
+  cursor: pointer;
+  border: 1px solid #4D5B9E;
 }
